--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'com.appscharles.libs', name: 'ioer', version: '1.0.0.0-dev16'
     compile group: 'com.appscharles.libs', name: 'processer', version: '1.0.0.0-dev6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
